--- a/index.html
+++ b/index.html
@@ -994,7 +994,7 @@
               <hr>
               
             <div>
-            <p class="footerp3">© 2020 COVID-19. Template Made by  <span class="spanfooter">Moamen Gamal Elsabbah</span>  .</p>
+            <p class="footerp3">© 2020 COVID-19. Template Made by  <span class="spanfooter">Basent Emad</span>  .</p>
             <p class="footerp4">Disclaimer: We hope you find the information presented on this website useful. This website is for general information and raise awareness of (2019-nCoV) only. All the information based on WHO, NHS and CDC website. Information on our website is meant for awareness, if you have 
               any doubt please verify from respective site</p>
              </div>
